fix mobile search spacing

--- a/src/pages/sitePages.css
+++ b/src/pages/sitePages.css
@@ -139,8 +139,9 @@
   display: flex;
   justify-content: center;
   margin-top: 25px;
-  margin-bottom: 40px;
-  padding: 0 18px;
+  margin-bottom: 35px;
+  padding-left: 20px;
+  padding-right:20px;
   box-sizing: border-box;
 }
 
